crates/bitnet-inference/tests/snapshots/snapshot_wave10__generation_config_creative_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: cfg
---
GenerationConfig {
    max_new_tokens: 100,
    temperature: 0.9,
    top_k: 100,
    top_p: 0.95,
    repetition_penalty: 1.1,
    stop_sequences: [],
    stop_token_ids: [],
    stop_string_window: 64,
    seed: None,
    skip_special_tokens: true,
    eos_token_id: None,
    logits_tap_steps: 0,
    logits_topk: 10,
    logits_cb: false,
    add_bos: false,
}
