crates/bitnet-inference/tests/snapshots/snapshot_wave10__generation_config_validate_negative_temperature_error.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: err
---
temperature must be non-negative
