crates/bitnet-inference/tests/snapshots/snapshot_wave10__generation_config_validate_repetition_penalty_zero_error.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: err
---
repetition_penalty must be positive
