crates/bitnet-inference/tests/snapshots/snapshot_wave10__generation_config_validate_top_p_above_one_error.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: err
---
top_p must be in range (0.0, 1.0]
