crates/bitnet-inference/tests/snapshots/snapshot_wave10__hardware_config_default_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: cfg
---
HardwareConfig {
    num_threads: 0,
    memory_limit_mb: 0,
}
