crates/bitnet-inference/tests/snapshots/snapshot_wave10__inference_config_cpu_optimized_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: cfg
---
InferenceConfig {
    max_context_length: 2048,
    num_threads: 4,
    batch_size: 1,
    mixed_precision: false,
    memory_pool_size: 536870912,
}
