crates/bitnet-inference/tests/snapshots/snapshot_wave10__inference_config_default_json.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: cfg
---
{
  "max_context_length": 2048,
  "num_threads": 4,
  "batch_size": 1,
  "mixed_precision": false,
  "memory_pool_size": 536870912
}
