crates/bitnet-inference/tests/snapshots/snapshot_wave10__inference_config_gpu_optimized_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave10.rs
expression: cfg
---
InferenceConfig {
    max_context_length: 2048,
    num_threads: 32,
    batch_size: 4,
    mixed_precision: true,
    memory_pool_size: 1073741824,
}
